# incan

./: .gitignore  AGENTS.md  CONTRIBUTING.md  CONTRIBUTORS.md  Cargo.toml  Makefile  README.md  deny.toml
.agents/: learnings.md
.config/: nextest.toml
.cursor/agents/: learnings.md
.github/workflows/: ci.yml  docs_site_deploy.yml  issue_auto_label.yml  sdk_release.yml  toolchain_release.yml  vscode_vsix_release.yml
benchmarks/: README.md  check_incan.sh
benchmarks/results/: results.md
crates/incan_codegraph/: Cargo.toml  README.md
crates/incan_codegraph/src/: lib.rs
crates/incan_core/: Cargo.toml
crates/incan_core/src/: errors.rs  lib.rs  strings.rs
crates/incan_core/src/interop/: capabilities.rs  coercions.rs  metadata.rs  mod.rs
crates/incan_core/src/lang/: builtins.rs  decorators.rs  derives.rs  errors.rs  features.rs  generated_support.rs  highlighting.rs  http.rs  keywords.rs  magic_methods.rs  mod.rs  operators.rs  punctuation.rs  registry.rs  rust_keywords.rs  stdlib.rs  trait_bounds.rs  trait_capabilities.rs  traits.rs
crates/incan_core/src/lang/surface/: collection_helpers.rs  constructors.rs  functions.rs  math.rs  methods.rs  mod.rs  types.rs
crates/incan_core/src/lang/types/: collections.rs  mod.rs  numerics.rs  stringlike.rs
crates/incan_core/tests/: lang_registry_guardrails.rs
crates/incan_derive/: README.md
crates/incan_semantics_core/: Cargo.toml
crates/incan_semantics_core/src/: lib.rs
crates/incan_semantics_stdlib/: Cargo.toml
crates/incan_semantics_stdlib/src/: lib.rs
crates/incan_stdlib/: Cargo.toml  README.md
crates/incan_stdlib/src/: collections.rs  errors.rs  frozen.rs  iter.rs  json.rs  lib.rs  num.rs  prelude.rs  reflection.rs  testing.rs  version.rs  web.rs
crates/incan_stdlib/src/async/: channel.rs  mod.rs  runtime.rs  select.rs  sync.rs  task.rs  time.rs
crates/incan_stdlib/src/collections/: ordinal_map.rs
crates/incan_stdlib/src/derives/: comparison.rs  copying.rs  mod.rs  string.rs
crates/incan_stdlib/stdlib/: collections.incn  graph.incn  io.incn  json.incn  logging.incn  math.incn  prelude.incn  reflection.incn  result.incn  tempfile.incn  testing.incn  this.incn  uuid.incn  zen.txt
crates/incan_stdlib/stdlib/async/: channel.incn  prelude.incn  select.incn  sync.incn  task.incn  time.incn
crates/incan_stdlib/stdlib/compression/: _auto.incn  _core.incn  bz2.incn  deflate.incn  gzip.incn  lzma.incn  prelude.incn  snappy.incn  zlib.incn  zstd.incn
crates/incan_stdlib/stdlib/compression/snappy/: raw.incn
crates/incan_stdlib/stdlib/datetime/civil/: naive.incn  offset.incn
crates/incan_stdlib/stdlib/derives/: collection.incn  comparison.incn  copying.incn  string.incn
crates/incan_stdlib/stdlib/encoding/: _shared.incn  base32.incn  base58.incn  base64.incn  base85.incn  bech32.incn  hex.incn  prelude.incn
crates/incan_stdlib/stdlib/fs/: file.incn  glob.incn  metadata.incn  path.incn  prelude.incn
crates/incan_stdlib/stdlib/hash/: _core.incn  _streaming.incn  prelude.incn
crates/incan_stdlib/stdlib/serde/: json.incn
crates/incan_stdlib/stdlib/telemetry/: core.incn  prelude.incn
crates/incan_stdlib/stdlib/traits/: callable.incn  convert.incn  error.incn  indexing.incn  ops.incn  prelude.incn
crates/incan_stdlib/stdlib/web/: app.incn  macros.incn  prelude.incn  request.incn  response.incn  routing.incn
crates/incan_syntax/: Cargo.toml
crates/incan_syntax/src/: ast.rs  diagnostics.rs  lib.rs
crates/incan_syntax/src/ast/: core.rs  decls.rs  exprs.rs  imports.rs  mod.rs  stmts.rs  types.rs  visitor.rs
crates/incan_syntax/src/diagnostics/: base.rs  catalog.rs  miette.rs  mod.rs  stable.rs
crates/incan_syntax/src/diagnostics/catalog/: lints.rs
crates/incan_syntax/src/diagnostics/catalog/errors/: const_eval.rs  mod.rs  modules.rs  rust_module.rs  syntax.rs  types.rs
crates/incan_syntax/src/lexer/: indent.rs  mod.rs  numbers.rs  strings.rs  tokens.rs
crates/incan_syntax/src/parser/: api.rs  core.rs  decl.rs  expr.rs  helpers.rs  mod.rs  stmts.rs  tests.rs  types.rs  util.rs
crates/incan_syntax/src/parser/decl/: adt.rs  decorators.rs  entrypoints.rs  functions.rs  imports.rs  mod.rs  models.rs  types.rs
crates/incan_syntax/src/scanners/: mod.rs  runtime.rs
crates/incan_vocab/: Cargo.toml  README.md
crates/incan_vocab/src/: ast.rs  desugar.rs  keywords.rs  lib.rs  manifest.rs  runtime.rs  version.rs  wasm_abi.rs
crates/incan_web_macros/: Cargo.toml
crates/incan_web_macros/src/: lib.rs
crates/rust_inspect/: Cargo.toml  README.md
crates/rust_inspect/src/: cache.rs  cache_resolve.rs  cache_tests.rs  cache_timing.rs  error.rs  extractor.rs  lib.rs  loader.rs
editors/vscode/: README.md  incan.tmLanguage.json  package.json
examples/: README.md
examples/advanced/: async_await.incn  async_channels.incn  async_sync.incn  async_tasks.incn  async_timeout_select.incn
examples/pro/: rust_interop_pro.incn
examples/pro/vocab_routekit/producer/vocab_companion/: Cargo.toml
examples/pro/vocab_routekit/producer/vocab_companion/src/: desugar.rs  lib.rs
examples/rust_interop_regex/: main.incn
examples/rust_interop_rusttype/: main.incn
examples/web/: hello_web.incn
scripts/: README.md  check_changed_rustdocs.py  run_examples.sh
src/: dependency_resolver.rs  lib.rs  lockfile.rs  manifest.rs  numeric_adapters.rs  semantics_registry.rs
stdlib/: math.incn  testing.incn
tests/: cli_integration.rs  codegen_snapshot_tests.rs  construction_diagnostics_tests.rs  generated_rust_artifact_tests.rs  generated_rust_callability_artifact_tests.rs  generated_rust_native_consumer_tests.rs  integration_tests.rs  layering_guard.rs  lowering_error_propagation.rs  property_tests.rs  sdk_installer_tests.rs  semantic_core_parity.rs  semantic_core_parity_strings.rs  std_encoding_algorithm_modules.rs  test_example.incn  toolchain_installer_tests.rs  vocab_guardrails.rs
workspaces/release/pip/: README.md  prepare_package.py  publish_package.sh  pyproject.toml
workspaces/release/pip/src/incan_sdk/: __init__.py  cli.py
workspaces/release/pip/src/incan_toolchain/: __init__.py  cli.py
(+949 files in other folders)
