[workspace]
members = [".", "crates/incan_derive", "crates/incan_stdlib", "crates/incan_core", "crates/incan_syntax"]
exclude = ["target/incan"]
resolver = "2"

[workspace.package]
version = "0.1.0-beta.4"
description = "The Incan programming language compiler"
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0"
authors = ["Danny Meijer <dannys.code.corner@gmail.com>"]
repository = "https://github.com/dannys-code-corner/incan-programming-language"
homepage = "https://github.com/dannys-code-corner/incan-programming-language"
readme = "README.md"
keywords = ["programming-language", "compiler", "rust", "python"]
categories = ["compilers", "development-tools"]

[package]
name = "incan"
version.workspace = true
license.workspace = true
edition.workspace = true  # Rust 2024 edition
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
authors.workspace = true
description.workspace = true
readme.workspace = true

[dependencies]
# Shared language/semantic helpers (canonical vocab)
incan_core = { path = "crates/incan_core" }
# Shared syntax frontend (lexer, parser, AST, diagnostics)
incan_syntax = { path = "crates/incan_syntax" }

# LSP server implementation
tower-lsp = "0.17"  # TODO: update to latest version
# Async runtime (for LSP and generated async code)
tokio = { version = "1", features = ["full"] }
# JSON serialization (for LSP protocol)
serde_json = "1.0"

# CLI parsing with typed subcommands
clap = { version = "4.4", features = ["derive"] }
# Composable error types
thiserror = "2.0"
# Rich error diagnostics with source context
miette = { version = "7.0", features = ["fancy"] }

# AST-based Rust code generation
syn = { version = "2.0", features = ["full", "parsing", "printing"] }
quote = "1.0"
proc-macro2 = "1.0"
# Code formatting for generated Rust
prettyplease = "0.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
# Snapshot testing for codegen
insta = { version = "1.45", features = ["glob"] }
# Property-based testing
proptest = "1"
# Runtime crate for parity tests
incan_stdlib = { path = "crates/incan_stdlib" }

[[bin]]
name = "incan"
path = "src/main.rs"

[[bin]]
name = "incan-lsp"
path = "src/bin/lsp.rs"

[lib]
name = "incan"
path = "src/lib.rs"
