[workspace]
members = [
    ".",
    "crates/incan_derive",
    "crates/incan_vocab",
    "crates/incan_stdlib",
    "crates/incan_core",
    "crates/incan_syntax",
    "crates/incan_semantics_core",
    "crates/incan_semantics_stdlib",
    "crates/incan_web_macros",
    "crates/rust_inspect",
]
exclude = ["target/incan"]
resolver = "2"

[patch.crates-io]
# `ra_ap_proc_macro_api` enables postcard's default `heapless-cas` feature even though it only
# needs postcard with `alloc`. That default feature pulls `heapless/cas`, which pulls the
# unmaintained `atomic-polyfill` crate tracked by issue #260. Keep this patch narrow and remove it
# when the upstream manifest disables postcard defaults.
ra_ap_proc_macro_api = { path = "crates/third_party/ra_ap_proc_macro_api" }

[workspace.package]
version = "0.3.0-rc2"
description = "The Incan programming language compiler"
edition = "2024"
rust-version = "1.92"
license = "Apache-2.0"
authors = ["Danny Meijer <dannys.code.corner@gmail.com>"]
repository = "https://github.com/dannys-code-corner/incan-programming-language"
homepage = "https://github.com/dannys-code-corner/incan-programming-language"
readme = "README.md"
keywords = ["programming-language", "compiler", "rust", "python"]
categories = ["compilers", "development-tools"]

[package]
name = "incan"
version.workspace = true
license.workspace = true
edition.workspace = true  # Rust 2024 edition
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
authors.workspace = true
description.workspace = true
readme.workspace = true

[features]
default = ["cli", "std_testing", "std_async", "std_decorators"]
cli = ["dep:clap", "dep:tracing-subscriber", "rust_inspect"]
lsp = ["dep:tower-lsp", "dep:tokio"]
std_testing = ["dep:incan_semantics_stdlib", "incan_semantics_stdlib/std_testing"]
std_async = ["dep:incan_semantics_stdlib", "incan_semantics_stdlib/std_async"]
std_decorators = ["dep:incan_semantics_stdlib", "incan_semantics_stdlib/std_decorators"]
# Rust dependency inspection via rust-analyzer (`ra_ap_*`) in the `rust_inspect` crate.
# Kept optional for non-CLI/library builds; the CLI enables it so ordinary `rust::` imports can preserve
# real function/type signatures.
rust_inspect = ["dep:rust_inspect"]

[dependencies]
# Shared language/semantic helpers (canonical vocab)
incan_core = { path = "crates/incan_core" }
incan_vocab = { path = "crates/incan_vocab" }
# Shared syntax frontend (lexer, parser, AST, diagnostics)
incan_syntax = { path = "crates/incan_syntax" }
# Shared semantics backend (type checker, semantic analysis)
incan_semantics_core = { path = "crates/incan_semantics_core" }
incan_semantics_stdlib = { path = "crates/incan_semantics_stdlib", optional = true }

# LSP server implementation
tower-lsp = { version = "0.20", optional = true }
# Async runtime (for LSP and generated async code)
tokio = { version = "1", features = ["full"], optional = true }
# JSON serialization (for LSP protocol)
serde_json = "1.0"

# CLI parsing with typed subcommands
clap = { version = "4.4", features = ["derive"], optional = true }
# Composable error types
thiserror = "2.0"
# Rich error diagnostics with source context
miette = { version = "7.0", features = ["fancy"] }

# AST-based Rust code generation
syn = { version = "2.0", features = ["full", "parsing", "printing"] }
quote = "1.0"
proc-macro2 = "1.0"
# Code formatting for generated Rust
prettyplease = "0.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }

# TOML parsing for incan.toml manifests (RFC 013/023)
toml = "0.9"
# Span-preserving TOML parsing for manifest diagnostics.
toml_edit = { version = "0.25", features = ["parse", "serde"] }
# Serde derive for manifest deserialization
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10.9"
hex = "0.4.3"
semver = "1.0.27"
rust_inspect = { path = "crates/rust_inspect", optional = true }
# WASM runtime for desugarer packaging
wasmtime = { version = "44.0.1", default-features = false, features = ["cranelift", "runtime", "std"] }
wasmtime-wasi = { version = "44.0.1", default-features = false, features = ["p1"] }

[dev-dependencies]
# Runtime crate used by std.io generated-project offline smoke tests.
byteorder = "1"
# Runtime crates used by std.compression generated-project offline smoke tests.
flate2 = "1"
zstd = "0.13"
bzip2 = "0.6"
xz2 = "0.1"
snap = "1"
# Runtime crates used by std.hash generated-project offline smoke tests.
blake2 = "0.10"
blake3 = "1"
md5_010 = { package = "md-5", version = "0.10" }
sha1 = "0.10"
sha3 = "0.10"
xxhash_rust = { package = "xxhash-rust", version = "0.8", features = ["xxh3", "xxh32", "xxh64"] }
# Snapshot testing for codegen
insta = { version = "1.45", features = ["glob"] }
# Property-based testing
proptest = "1"
# Runtime crate for parity tests
incan_stdlib = { path = "crates/incan_stdlib" }
# Temporary directories for manifest discovery tests
tempfile = "3"
wat = "1"

[[bin]]
name = "incan"
path = "src/main.rs"
required-features = ["cli"]

[[bin]]
name = "incan-lsp"
path = "src/bin/lsp.rs"
required-features = ["lsp"]

[lib]
name = "incan"
path = "src/lib.rs"
