[package]
name = "incan_core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Shared language vocabulary and semantic helpers for the Incan compiler and runtime"

[lib]
name = "incan_core"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
