[package]
name = "incan_syntax"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Shared syntax frontend (lexer, AST, parser) for the Incan compiler and tooling"
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[dependencies]
incan_core = { path = "../incan_core" }
incan_vocab = { path = "../incan_vocab" }
incan_semantics_core = { path = "../incan_semantics_core" }
thiserror = "2.0"
miette = { version = "7.0", features = ["fancy"] }
tracing = "0.1"

[dev-dependencies]
insta = { version = "1.45", features = ["glob"] }
