[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "incan"
version = "0.4.0rc0"
description = "Thin installer package for the Incan toolchain"
readme = "README.md"
requires-python = ">=3.9"
license = "Apache-2.0"
authors = [
  { name = "Danny Meijer", email = "dannys.code.corner@gmail.com" },
]
keywords = ["incan", "compiler", "toolchain"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Operating System :: MacOS",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Topic :: Software Development :: Compilers",
]

[project.urls]
Homepage = "https://github.com/encero-systems/incan"
Repository = "https://github.com/encero-systems/incan"

[project.scripts]
incan = "incan_toolchain.cli:incan"
incan-lsp = "incan_toolchain.cli:incan_lsp"
install-incan = "incan_toolchain.cli:install"

[tool.hatch.build.targets.wheel]
packages = ["src/incan_toolchain"]
